Fixed main height to remove scrollbar

--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ header {
     align-items: center;
     margin: 0 0;
     padding: 0;
+    height: 100px;
 
 
 }
 
 main {
-    height: 100%;
+    height: calc(100% - 100px);
     background-color: slategray;
 }
 
